src/z80asm/z80asm2/t/20-preproc/expected/binary_23.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/binary_23.asm
Assembling t/20-preproc/input/binary_23.asm...
t/20-preproc/input/binary_23.asm:1:27: error: Unexpected token after BINARY: extra
    binary file_not_found.bin extra
                              ^
